[gd_scene load_steps=13 format=3 uid="uid://bdr4d7j2lkvsg"]

[ext_resource type="Texture2D" uid="uid://bcwfc204nf0kq" path="res://UI/MoveOutline.png" id="1_m1oxk"]
[ext_resource type="Script" path="res://UI/HUD.gd" id="1_ymfxc"]
[ext_resource type="Texture2D" uid="uid://cxk0hte4oqp8b" path="res://UI/Move.png" id="2_qrgm3"]
[ext_resource type="Texture2D" uid="uid://bcpngx4i8c3ye" path="res://UI/ActionOutline.png" id="3_f03j1"]
[ext_resource type="Texture2D" uid="uid://cekq2o6q2updg" path="res://UI/Action.png" id="4_n408o"]
[ext_resource type="Texture2D" uid="uid://civ372syou2x6" path="res://UI/TurnOutline.png" id="5_3wc1a"]
[ext_resource type="Texture2D" uid="uid://deo1msgydtcbb" path="res://UI/Turn.png" id="6_ko3ij"]
[ext_resource type="Texture2D" uid="uid://2a6y3ehkcm4i" path="res://UI/Portrait.png" id="7_xdbhw"]
[ext_resource type="Theme" uid="uid://b3m5cx7w8nya8" path="res://UI/HUD.tres" id="8_037fx"]
[ext_resource type="Texture2D" uid="uid://buisvcwrhy2q0" path="res://UI/FloorInfo.png" id="8_ysboo"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jcqgg"]

[sub_resource type="BoxMesh" id="BoxMesh_b6ckj"]
material = SubResource("StandardMaterial3D_jcqgg")
size = Vector3(8, 8, 0.5)

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ymfxc")

[node name="TurnHUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 966.0
offset_top = 10.0
offset_right = 1014.0
offset_bottom = 58.0

[node name="MoveOutline" type="TextureRect" parent="TurnHUD"]
layout_mode = 0
offset_left = 3.0
offset_top = 51.0
offset_right = 19.0
offset_bottom = 67.0
texture = ExtResource("1_m1oxk")

[node name="Move" type="TextureRect" parent="TurnHUD/MoveOutline"]
modulate = Color(0.63, 0.72, 0.86, 1)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("2_qrgm3")

[node name="ActionOutline" type="TextureRect" parent="TurnHUD"]
layout_mode = 0
offset_left = 28.0
offset_top = 51.0
offset_right = 44.0
offset_bottom = 67.0
texture = ExtResource("3_f03j1")

[node name="Action" type="TextureRect" parent="TurnHUD/ActionOutline"]
modulate = Color(0.631373, 0.721569, 0.858824, 1)
layout_mode = 0
offset_right = 16.0
offset_bottom = 16.0
texture = ExtResource("4_n408o")

[node name="TurnOutline" type="TextureRect" parent="TurnHUD"]
layout_mode = 0
offset_right = 48.0
offset_bottom = 48.0
texture = ExtResource("5_3wc1a")

[node name="Turn" type="TextureRect" parent="TurnHUD/TurnOutline"]
modulate = Color(0.631373, 0.721569, 0.858824, 1)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("6_ko3ij")

[node name="Floor_Player" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 416.0
offset_top = 679.0
offset_right = 608.0
offset_bottom = 738.0
texture = ExtResource("8_ysboo")

[node name="FloorInfo" type="RichTextLabel" parent="Floor_Player"]
layout_mode = 0
offset_left = 3.0
offset_top = 6.0
offset_right = 189.0
offset_bottom = 57.0
theme = ExtResource("8_037fx")
bbcode_enabled = true
text = "[center]Floor 0
test"
scroll_active = false

[node name="Money" type="RichTextLabel" parent="Floor_Player"]
layout_mode = 0
offset_top = 59.0
offset_right = 96.0
offset_bottom = 87.0
theme = ExtResource("8_037fx")
bbcode_enabled = true
text = " [img]res://UI/Coin.png[/img] 0 
"
text_direction = 1

[node name="Soul" type="RichTextLabel" parent="Floor_Player"]
layout_mode = 0
offset_left = 96.0
offset_top = 59.0
offset_right = 192.0
offset_bottom = 86.0
theme = ExtResource("8_037fx")
bbcode_enabled = true
text = " [img]res://UI/Soul.png[/img] 0 "
text_direction = 2

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 138.0
offset_bottom = 138.0
texture = ExtResource("7_xdbhw")

[node name="PortraitBackground" type="TextureRect" parent="Portrait"]
z_index = -1
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 124.0
offset_bottom = 124.0

[node name="Status" type="Control" parent="Portrait"]
anchors_preset = 0
offset_left = 128.0
offset_top = 13.0
offset_right = 128.0
offset_bottom = 13.0

[node name="NameLabel" type="RichTextLabel" parent="Portrait/Status"]
layout_mode = 0
offset_right = 209.0
offset_bottom = 28.0
theme = ExtResource("8_037fx")
bbcode_enabled = true
text = " hi"
scroll_active = false

[node name="TypeLabel" type="RichTextLabel" parent="Portrait/Status"]
layout_mode = 0
offset_top = 27.0
offset_right = 209.0
offset_bottom = 55.0
theme = ExtResource("8_037fx")
bbcode_enabled = true
text = " hi"
scroll_active = false

[node name="HealthLabel" type="RichTextLabel" parent="Portrait/Status"]
layout_mode = 0
offset_top = 81.0
offset_right = 209.0
offset_bottom = 109.0
theme = ExtResource("8_037fx")
bbcode_enabled = true
text = " [img]res://UI/Heart.png[/img] hi [img]res://UI/Armor.png[/img]"
scroll_active = false

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(120, 120)

[node name="Portrait" type="Node3D" parent="SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 100, 0, 0)

[node name="Camera3D" type="Camera3D" parent="SubViewport/Portrait"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 1)
fov = 60.0

[node name="SpotLight3D" type="SpotLight3D" parent="SubViewport/Portrait/Camera3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport/Portrait/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4)
mesh = SubResource("BoxMesh_b6ckj")
